from enum import StrEnum, unique


@unique
class StateEnum(StrEnum):
    """Cirrus state strings"""

    PROCESSING = "PROCESSING"
    SUCCEEDED = "SUCCEEDED"
    FAILED = "FAILED"
    INVALID = "INVALID"
    ABORTED = "ABORTED"
    CLAIMED = "CLAIMED"


@unique
class SfnStatus(StrEnum):
    """StepFunctions status strings"""

    SUCCEEDED = "SUCCEEDED"
    FAILED = "FAILED"
    ABORTED = "ABORTED"
    TIMED_OUT = "TIMED_OUT"


@unique
class WFEventType(StrEnum):
    """Cirrus Workflow Event Type strings"""

    CLAIMED_PROCESSING = "CLAIMED_PROCESSING"
    STARTED_PROCESSING = "STARTED_PROCESSING"
    ALREADY_INVALID = "ALREADY_INVALID"
    ALREADY_PROCESSING = "ALREADY_PROCESSING"
    ALREADY_CLAIMED = "ALREADY_CLAIMED"
    ALREADY_SUCCEEDED = "ALREADY_SUCCEEDED"
    DUPLICATE_ID_ENCOUNTERED = "DUPLICATE_ID_ENCOUNTERED"
    FAILED = "FAILED"
    TIMED_OUT = "TIMED_OUT"
    SUCCEEDED = "SUCCEEDED"
    INVALID = "INVALID"
    ABORTED = "ABORTED"
    RECORD_EXTRACT_FAILED = "RECORD_EXTRACT_FAILED"
    NOT_A_PROCESS_PAYLOAD = "NOT_A_PROCESS_PAYLOAD"
