stateDiagram-v2
    [*] --> STATELESS : New payload received
    STATELESS --> CLAIMED : Payload conforms to schema - emit CLAIMED_PROCESSING
    STATELESS  --> [*] : Malformed payload or unprocessable - emit FAILED_TO_EXTRACT or NOT_A_PROCESS_PAYLOAD
    STATELESS --> [*] : already in process or processed - emit ALREADY_*
    CLAIMED --> PROCESSING : Step function execution starts - emit STARTED_PROCESSING
    CLAIMED --> FAILED : State machine doesn't exist or other terminal error - emit FAILED
    CLAIMED --> [*] : Race condition encountered - emit ALREADY_COMPLETED or ALREADY_PROCESSING

    PROCESSING --> SUCCEEDED : Workflow succeeds - emit SUCCEEDED
    PROCESSING --> FAILED : Workflow fails with error - emit FAILED
    PROCESSING --> INVALID : Workflow fails with invalid input error - emit INVALID
    PROCESSING --> ABORTED : Workflow manually aborted - emit ABORTED
    PROCESSING --> TIMED_OUT : Workflow execution times out - emit TIMED_OUT

    SUCCEEDED --> [*]
    FAILED --> [*]
    INVALID --> [*]
    ABORTED --> [*]
    TIMED_OUT --> [*]
